--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -15,62 +15,62 @@ To answer these questions we are going to make use of the schema presented by \c
         \includegraphics[scale=0.6]{Talk7/img/app/BCorNot}
     \end{center}
     \caption{"Do you need a Blockchain?" Schema \cite{Wust2017}}
-    \label{Blockchain_or_not}
+    \label{fig:Blockchain_or_not}
 \end{figure}
 
 \subsubsection{E-Voting}
 \label{subsec:03_applications_evoting}
-The ability to vote is the very foundation of every successful democracy and must be accessible for all eligible citizens. Most common systems today are paper-based voting systems that do not scale well and rely on the procedural security of officials conducting their jobs. And while various e-Voting systems exist, they all come with multiple security vulnerabilities, that lead to an enormous risk of election rigging and fraud.
+The ability to vote is the very foundation of every successful democracy and must be accessible for all eligible citizens. Most common systems today are paper-based voting systems that do not scale well and rely on the procedural security of officials conducting their jobs. And while various e-Voting systems exist, all come with multiple security vulnerabilities, that pose an enormous risk of election rigging and fraud.
 The Blockchain, on the other hand, offers a transparent and incorruptible database that does not have a single point of failure and cannot be controlled by a single entity. Meanwhile, new concerns arise, such as a lack of privacy and authentification issues.
 
-To date, several e-Voting systems exist, differing mostly in the amount of integration and the role of the Blockchain. An exhaustive overview can be found in  \cite{BenAyed2017}.
+To date, several e-Voting systems exist, differing mostly in the amount of integration and the role of the Blockchain. A more exhaustive overview of such applications can be found in \cite{BenAyed2017}.
 
-Most existing systems such as Votebook \cite{Kirby2016} or Vote Watchers \cite{BlockchainTechnologiesCorporation} do not fully integrate the Blockchain, but instead, use it as an underlying database system. Those systems rely on paper ballots. In these case, people have to authenticate by showing up at a real voting booth. Both examples use the Blockchain as a specific type of database, that is tamperproof and has the ability to create a history of all its entries. Additionally, the results of each booth can be aggregated with all other stations to generate a final result\cite{BenAyed2017}.
+Most existing systems such as Votebook \cite{Kirby2016} or Vote Watchers \cite{BlockchainTechnologiesCorporation} do not fully integrate the Blockchain, but instead use it as an underlying database system. In both cases, people have to authenticate by showing up at a real voting booth using paper ballots. Both use the Blockchain as a specific type of database, that is tamperproof and has the ability to create a history of all its entries. Additionally, the results of each booth can be aggregated with all other stations to generate a final result\cite{BenAyed2017}.
 According to \cite{Osgood2016}, these systems follow the only "doable" approach, as they do not deny the fact, that voters have to identify themselves somewhere.
 
-Follow my Vote \cite{FollowMyVote} follows a fundamentally different approach: It fully integrates the Blockchain and uses its ability to act as a distributed ledger. Each voter installs a local "Voting Box" on his computer, requests ballots online and votes directly from within the application. The authentification process is done via the organization that holds the election by uploading official documents also from within the application. Nevertheless, according to \cite{Osgood2016}, this idea is fundamentally flawed as authentication mechanisms are still an issue and the technique could scare off remote voters.
+FollowMyVote \cite{FollowMyVote} follows a fundamentally different approach: It not only integrates the Blockchain, but uses its ability to act as a fully distributed ledger and self-organized entity. Each voter installs a local "Voting Box" on his computer, requests ballots online and votes directly from within the application. The authentification process is done via the organization that holds the election by uploading official documents also from within the application. Nevertheless, according to \cite{Osgood2016}, this idea is fundamentally flawed as authentication mechanisms are still an issue and the technique could scare off remote voters.
 
 Within the three proposed systems, two fundamental questions seem to remain unanswered:
 \begin{enumerate}
-    \item \textbf{Authenticating users and the existence of a trusted third party}: To authenticate the voters, an organization, that has all the necessary data is inevitable. In most cases, this leaves only the government as an option. However, according to the diagram by \cite{Wust2017} the use of Blockchain technology only makes sense if no trusted third party exists. This causes a dilemma: If the non-existing trust in the government is the justification for the use of the Blockchain, the question arises whether the government can be trusted regarding the authentication of the voters. Even though a systematic rigging is harder to achieve with this approach, the problem remains at hand.
+    \item \textbf{Authenticating users and the existence of a trusted third party}: To authenticate the voters, an organization that has all the necessary data, is inevitable. In most cases, this leaves only the government as an option. However, according to the diagram by \cite{Wust2017} the use of Blockchain technology only makes sense if no trusted third party exists. This causes a dilemma: If the non-existing trust in the government is the justification for the use of the Blockchain, the question arises whether the government can be trusted regarding the authentication of the voters. Even though a systematic rigging is harder to achieve with this approach, the problem remains at hand.
     \item \textbf{The user as a single point of failure}: While the Blockchain does seem to be perfect for voting situations, it still leaves the most important point of failure unprotected: The user himself. Even the most tamper-proofed, Blockchain-based voting system does not prevent hackers from a compromising an end-device.
 \end{enumerate}
 
-Up to date, no system has yet been proposed that has been shown to be secure, verifiable and private at the same time. The question of authentification comes into play as an additional point of failure of the concept \cite{Osgood2016}.
-Therefore, if an (online) trusted third party exists, the use of the Blockchain is not necessary. If the government is trusted as far as the authentification of the voters goes, a public permissioned Blockchain can be a good fit. However, the security of the system then relies on the integrity of the validators,  leads us to where we started. If the government is not trusted at all, there exists no solution that overcomes that systematic flaw in a countries governance.
+Up to date, no proposed system has been shown to be secure, verifiable and private at the same time. The question of authentification comes into play as an additional point of failure of the concept \cite{Osgood2016}.
+Hende, if an (online) trusted third party exists, the use of the Blockchain is not necessary. If the government is trusted as far as the authentification of the voters goes, a public permissioned Blockchain can be a good fit. However, the security of the system then relies on the integrity of the validators,  leads us to where we started. If the government is not trusted at all, there exists no solution that overcomes that systematic flaw in a countries governance.
 
 The Blockchain can be a solution if the question of authentification can be answered satisfactorily. Otherwise, a traditional paper-based voting system is as good as any voting system including Blockchain based systems or systems that are based on a trusted third party.
 
 \subsubsection{Autonomous Vehicles, Smart Cities \& IoT}
 Smart vehicles are increasingly connected to surrounding infrastructure via the Internet, thus making them part of the IoT. This development brings apparent advantages, but also many challenges, especially in the area of cybersecurity. Malicious attacks on a vehicle endanger not only the vehicles data and passengers but also other road users. Traditional approaches meanwhile tend to be ineffective due to centralization, unscalability, and unsecured communication architectures \cite{DorriSteger2017}. Because the Blockchain offers solutions to many of these problems, various approaches exist to connect self-driving vehicles with a Blockchain-based architecture.
 
-Ali et al. propose a smart vehicle ecosystem based on a Blockchain architecture \cite{DorriSteger2017}. It consists of clusters of nodes which are connected to the system via Overlay Block Managers (OBMs). Each vehicle is connected to an overlay of various OBMs that form the Blockchain overlay. All Transactions are broadcast to and verified by the OBMs.
+Ali et al. propose a smart vehicle ecosystem based on a Blockchain architecture \cite{DorriSteger2017}. It consists of nodes that are clustered and connected via Overlay Block Managers (OBMs) that form the Blockchain overlay. Each vehicle is presents a node that is connected to to the system through the closest OBMs. All Transactions are broadcast to and verified by the OBMs.
 To ensure the user's privacy, each vehicle is equipped with internal vehicle storage to store sensitive data. Each owner can decide which data is provided to third parties and which data is not.
 To make specific public keys identifiable in the real world, a trusted third party is involved, and a centralized mechanism is used. This is needed in the case of service centers and software providers. The ecosystem makes remote software updates, vehicle insurance, smart charging, and vehicle sharing possible.
 
-Also on a large scale, but slightly different is the hierarchical system proposed by \cite{Sharma2017}. Two trusted third parties that register the vehicles (e.g., Department of Motor Vehicles) and that categorize the vehicles into minor nodes and ordinary nodes (Revocation Authority) exist at the very top. At the same level, the Blockchain overlay is constituted by controller nodes, that hold the information of the vehicle network. The lower layer consists of minor nodes. These are selected vehicles that store data generated by sensors and applications. 
+Also on a large scale, but slightly different is the hierarchical system proposed by \cite{Sharma2017}. Two trusted third parties that register the vehicles (Department of Motor Vehicles) and that categorize the vehicles into minor nodes and ordinary nodes (Revocation Authority) exist at the top layer. At the same layer, controller node constitute the Blockchain overlay and hold the information of the vehicle network. The lower layer consists of minor nodes. These are selected vehicles that store data generated by sensors and applications. 
 The hierarchy between the higher-order nodes and the lower-order nodes, allows to set different rights for different levels of the overlay: The system nodes e.g. are allowed to make specific data requests to the miner nodes, to gather information from sensors, while the miner nodes are only allowed to get general information from the higher-order nodes.
 
-The authors of \cite{Rowan2017} looks at the problem from a different angle: It focusses on the communication between two road members through side-channels such as visible light and acoustic signals. To solve the problem of the limited data throughput while trying to securely validate the other communication partner, centralized approaches were discarded due to the high number of existing manufacturers and standards. Instead, a Blockchain based domain name system is proposed.
+The authors of \cite{Rowan2017} look at the problem from a different angle: They focus on the communication between two road members through side-channels such as visible light and acoustic signals. To solve the problem of the limited data throughput while trying to securely validate the other communication partner, centralized approaches were discarded due to the high number of existing manufacturers and standards. Instead, a Blockchain based Domain Name System (DNS) is proposed.
 When two vehicles meet, their communication needs to be extremely fast and work in the absence of any internet connection or any centralized infrastructure. 
-To make this possible, Blockchain is used as a way to replace the need for a central authority when authenticating another vehicle. By creating a decentralized Name Service that binds the license plate value and identity together with a certificate, it is able to create a good base for a secure session between two vehicles.
+To make this possible, Blockchain technology is used as a way to replace the need for a central authority when authenticating another vehicle. By creating a decentralized DNS that binds the license plate value and identity together using a certificate, it is able to create a good base for a secure session between two vehicles.
 
-In the presented ideas, the Blockchain has different roles. And while the approach by \cite{Rowan2017} uses it as a replacement for a domain name service, the approaches by \cite{DorriSteger2017} and \cite{Sharma2017} think further and propose actual ecosystems including other IoT devices in the use case of a smart city.
-The thought of having multiple layers of nodes that, even though all incorporate the Blockchain, have different rights to write and access the Blockchain, seems very promising and suits well to the hierarchical structures that are necessary to organize a smart city network. In some way, it can be thought of a system of checks and balances where some nodes have more rights, but their actions can always be seen and verified from everywhere at any time.
+In the presented ideas, the Blockchain takes on different roles. And while the approach by \cite{Rowan2017} uses it as a replacement for a DNS service, the approaches by \cite{DorriSteger2017} and \cite{Sharma2017} think further and propose actual ecosystems including other IoT devices in the use case of a smart city.
+The thought of having multiple layers of nodes that, even though all incorporate the Blockchain, have different rights to write and access the Blockchain, seems very promising and suits well to the hierarchical structures that are necessary to organize a smart city network. In some way, it can be thought of as a system of checks and balances, where some nodes have more rights, but their actions can always be seen and verified from everywhere at any time.
 
-Applying the flow-chart by \cite{Wust2017}, we identify the main issue again in the existence of a trusted third party. Whether it exists explicitly such as in the systems of \cite{Sharma2017} or implicitly such as in the case of \cite{Rowan2017} or \cite{DorriSteger2017}, in all three scenarios we have a third party that comes into play. 
+Applying the schema represented by the flowchart in figure \ref{fig:Blockchain_or_not}, we identify the main issue again in the existence of a trusted third party. Whether it exists explicitly such as in the systems of \cite{Sharma2017} or implicitly such as in the case of \cite{Rowan2017} or \cite{DorriSteger2017}, in all three scenarios we have a third party that needs to comes into play. 
 According to \cite{Wust2017}, this can only lead to two possible outcomes: Either, the use of the Blockchain is not necessary or a private permissioned Blockchain should be chosen \cite{Wust2017}, reducing the Blockchain to a decentral database system.
-Nevertheless, the IoT setting fits the Blockchain particularly well, because the data generated by sensors can be incorporated right away without any trusted third parties. The fact that they exist on a different level, does not invalidate the advantages of the Blockchain in this case.
+Nevertheless, the IoT setting fits the Blockchain particularly well, because the data generated by sensors can be incorporated right away without any trusted third parties.
 
 \subsubsection{Personal Data Protection and Sharing in the medical sector}
-The medical sector has two concerns regarding data, (i) the sharing of data, and (ii) the protection of data. One one hand, sharing private data is necessary to ensure safe medication and even save lives, on the other hand, the data is extremely sensitive and can inflict big problems on individuals if made public.
+The medical sector has two concerns regarding data, the sharing of data and the protection of data. One one hand, sharing private data is necessary to ensure safe medication and even save lifes, on the other hand, the data is extremely sensitive and can inflict big problems on individuals if made public.
 As an additional and particularly compelling aspect, the combination of IoT devices and smart contracts needs to be mentioned. With the use of smart contracts, IoT devices carry out autonomous transactions on the Blockchain, while guaranteeing access control and data validity at the same time.
 
-In the health-care sector three traditional models exist to deal with the facility of interoperability of medical data \cite{Kshetri2017}: The push model, where medical information is sent from one provider to another, the pull model, where one provider asks another provider for information and the view model, where one provider looks at another providers record.
+In the health-care sector three traditional models exist to deal with the facility of interoperability of medical data: The push model, where medical information is sent from one provider to another, the pull model, where one provider asks another provider for information and the view model, where one provider looks at another providers record \cite{Kshetri2017}.
 A major drawback to all of these models is that the data is not audited or tracked in a standardized way. For example, if a patient is transferred to a different hospital, the new hospital may not be able to access data that was not "pushed." This means that there is no guarantee that the data's integrity is maintained over time.
 It is argued by \cite{Kshetri2017} that the Blockchain offers a fourth model, which makes it possible to share medical records securely across providers without having the need to include a trusted third party into the process. It leaves the data owner in full control about what is shared and leaves a verifiable audit trail of the data behind \cite{Kshetri2017}.
 
-The MedRec system by \cite{Azaria2016} is a Blockchain-based, network to share and protect clinical data. Via smart contracts on an Ethereum Blockchain, it logs patient-provider relationships, that associate a medical record with viewing permissions, and data retrieval instructions for the execution on external databases.
+The MedRec system by \cite{Azaria2016} is a Blockchain-based network to share and protect clinical data. Via smart contracts on an Ethereum Blockchain, it logs patient-provider relationships, that associate a medical record with viewing permissions, and data retrieval instructions for the execution on external databases.
 The systems nodes consist of providers, that require a full server and database infrastructure, and patients, that can use any mobile device or web-interface and use only a local database with their own data.
 Providers can add new records associated with a particular patient and patients can authorize the sharing of records between providers. The involved parties are notified by automated notifications when changes occur or new data is added. To avoid unintended or abusive use of data, different policies are put in place by the owner and carried out by smart contracts
 To create incentives to run a Blockchain node, MedRec offers block rewards and anonymized patient data.
@@ -80,10 +80,10 @@ To address these problems, \cite{Cao2019} propose a secure cloud-based system th
  Each patient makes an appointment with the hospital and obtains a treatment key for diagnosis. With the treatment key, a secure channel between patient, hospital and the doctors is established. 
 The patient generates warrants to delegate to doctors, that indicate the identities of the treating doctors for specific treatment time and the needed auxiliary medical information \cite{Cao2019}.
 During the treatment time, doctors generate medical records for the patient and store them on the Blockchain \cite{Cao2019}.
-The system is protected against medical record modification attacks, impersonation attacks and a change of timeline whether by a hacker or an insider like a doctor.
+The system is protected against medical record modification attacks, impersonation attacks and a change of timeline whether by a hacker or an insider, like a doctor.
 
-While the approaches by \cite{Cao2019} and \cite{Azaria2016} both offer a different level of extensiveness, they both make good use of the Blockchains ability to generate an audit trail and run user-configurable smart contracts autonomously and provide proper security mechanisms against the misuse of and the falsification of patient data.
-The use of the Blockchain is challenged though by the question "Are all writers trusted?"\cite{Wust2017}. It shows that the real problem lies in the "transition"-phase of the whole process: The moment when the real world gets projected by a human being onto the digital world, imposes the vulnerability. We must, therefore, ask the question: If we do not trust the doctors to create rightful medical records, why do we consult them? Moreover, if we do trust them, why do we need a mechanism that prevents the doctors from forging medical records?
+While the approaches by \cite{Cao2019} and \cite{Azaria2016} both offer a different level of extensiveness, they both make good use of the Blockchains ability to generate an audit trail and run user-configurable smart contracts autonomously, providing at the same time proper security mechanisms against the misuse of and the falsification of patient data.
+The use of the Blockchain is challenged though by the question "Are all writers trusted?" as asked by \cite{Wust2017}. It shows that the real problem lies in the "transitioning"-phase of the data: The moment when the real world gets projected by a human being onto the digital world, imposes the vulnerability. We must therefore ask the question: If we do not trust the doctors to create rightful medical records, why do we consult them? Moreover, if we do trust them, why do we need a mechanism that prevents the doctors from forging medical records?
 
 The question whether such a system must be run on the Blockchain can therefore not be answered finally. The Blockchain is used to make the system more secure. But the Blockchain cannot take over the responsibility for human or institutional malevolence.
 
@@ -105,6 +105,6 @@ An uncovered topic in all the work on the Blockchain in the medical sector is th
 
 \subsubsection{Concluding remarks}
 The covered topics show a broad use of the Blockchain in order to increase a systems security. Most of the time the Blockchain is chosen as a way to store data in a tamperproof manner and to be able to verify the integrity of the data at all times.
-Most approaches, however, try to create a suitable database system, that reduces the Blockchain to a way of storing data in a distributed way. The result is always a private permissioned Blockchain that has no real solution for the initial problem: The incorporation of the data itself into the Blockchain. The human as the first actor and the problem that arises with this fact, namely that we cannot outsource trust to a machine, is neglected.
+Most approaches, however, try to reduce the Blockchain to a distributed database. The result is always a private permissioned Blockchain that has no real solution for the initial problem: The incorporation of the data itself into the Blockchain. The human as the first actor and the problem that arises with this fact, namely that we cannot outsource trust to a machine, is neglected.
 
-Promising, on the other hand, are use cases where such a human translation-factor does not exist per se. Use-cases that already have digital assets at hand, suit a Blockchain scenario. Such approaches can exploit the advantages and properties of the Blockchain technology at its fullest, without twisting it to fit a specific purpose.
+Promising, on the other hand, are use cases where such a human translation-factor does not exist per se. Use-cases that already have digital assets at hand, suit a Blockchain scenario well. Such approaches can exploit the advantages and properties of the Blockchain technology at its fullest, without twisting it to fit a specific purpose.
